src/components/Home/Home.css
  .icon-1000
  {
    font-size: 700%;
    font-weight: 100;
  }

  .masthead{
    height: 70vh;
    min-height: 500px;
    color: #ffffff;
    background: -moz-linear-gradient(top,  #43ffe9 0%, #093c84 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(top,  #43ffe9 0%,#093c84 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom,  #43ffe9 0%,#093c84 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  }

  .big-text{
    font-size: 7rem;
  }
  .small-big-text{
    font-size: 3rem;
  }

